Refactor project namespace and update database schema
This commit changes the project namespace from `APIKanini` to `APIManyToMany`, affecting controllers, models, services, and repositories. The `.csproj` file has been updated to remove unnecessary files.

The `HospitalContext` now includes a `Role` entity and configures a many-to-many relationship between `Doctor` and `Patient`. Classes such as `Doctor`, `Hospital`, `Patient`, `Role`, and `User` have been modified to reflect the new namespace and additional properties.

Migration files have been updated to match the new database schema, including new tables and seeded data. Service and repository classes have been adjusted for the new namespace, and authorization attributes have been added to `TokenController` and `DoctorsController` for enhanced security.

Additionally, `Program.cs` and unit tests have been updated to ensure all dependencies are correctly referenced and functional.

--- a/APIManyToMany/APIManyToMany.csproj
+++ b/APIManyToMany/APIManyToMany.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Interface\wf0wbmth.jqq~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
